--- a/spec/vcr_cassettes/pull_request_annotation_removes_label.yml
+++ b/spec/vcr_cassettes/pull_request_annotation_removes_label.yml
@@ -245,10 +245,10 @@ http_interactions:
         to Chef Software, Inc. projects or are using a non-GitHub verified email address.
         To become authorized to contribute, you will need to sign the Contributor
         License Agreement (CLA) as an individual or on behalf of your company. [You
-        can read more on Chef''s blog.](https://www.getchef.com/blog/2014/06/23/changes-to-the-contributor-license-agreement-process)\n\n##
+        can read more on Chef''s blog.](https://www.chef.io/blog/2014/06/23/changes-to-the-contributor-license-agreement-process)\n\n##
         GitHub Users Who Are Not Authorized To Contribute\n\nThe following GitHub
         users do not appear to have signed a CLA:\n\n* @brettchalupa\n\n[Please sign
-        the CLA here.](https://community.getchef.com)"}'
+        the CLA here.](https://community.chef.io)"}'
     headers:
       Accept:
       - application/vnd.github.v3+json
@@ -322,10 +322,10 @@ http_interactions:
         Inc. projects or are using a non-GitHub verified email address. To become
         authorized to contribute, you will need to sign the Contributor License Agreement
         (CLA) as an individual or on behalf of your company. [You can read more on
-        Chef''s blog.](https://www.getchef.com/blog/2014/06/23/changes-to-the-contributor-license-agreement-process)\n\n##
+        Chef''s blog.](https://www.chef.io/blog/2014/06/23/changes-to-the-contributor-license-agreement-process)\n\n##
         GitHub Users Who Are Not Authorized To Contribute\n\nThe following GitHub
         users do not appear to have signed a CLA:\n\n* @brettchalupa\n\n[Please sign
-        the CLA here.](https://community.getchef.com)"}'
+        the CLA here.](https://community.chef.io)"}'
     http_version: 
   recorded_at: Tue, 02 Dec 2014 19:30:51 GMT
 - request:
@@ -409,7 +409,7 @@ http_interactions:
   recorded_at: Tue, 02 Dec 2014 19:30:51 GMT
 - request:
     method: post
-    uri: https://api.github.com/repos/opscode/paprika/issues/1/labels
+    uri: https://api.github.com/repos/chef/paprika/issues/1/labels
     body:
       encoding: UTF-8
       string: '["Signed CLA"]'
@@ -481,13 +481,13 @@ http_interactions:
       - a241e1a8264a6ace03db946c85b92db3
     body:
       encoding: UTF-8
-      string: '[{"url":"https://api.github.com/repos/opscode/paprika/labels/Signed+CLA","name":"Signed
+      string: '[{"url":"https://api.github.com/repos/chef/paprika/labels/Signed+CLA","name":"Signed
         CLA","color":"8ED41E"}]'
     http_version: 
   recorded_at: Wed, 03 Dec 2014 22:33:52 GMT
 - request:
     method: get
-    uri: https://api.github.com/repos/opscode/paprika/issues/1/labels
+    uri: https://api.github.com/repos/chef/paprika/issues/1/labels
     body:
       encoding: US-ASCII
       string: ''
@@ -561,13 +561,13 @@ http_interactions:
       - 76d9828c7e4f1d910f7ba069e90ce976
     body:
       encoding: UTF-8
-      string: '[{"url":"https://api.github.com/repos/opscode/paprika/labels/Signed+CLA","name":"Signed
+      string: '[{"url":"https://api.github.com/repos/chef/paprika/labels/Signed+CLA","name":"Signed
         CLA","color":"8ED41E"}]'
     http_version: 
   recorded_at: Wed, 03 Dec 2014 22:33:52 GMT
 - request:
     method: delete
-    uri: https://api.github.com/repos/opscode/paprika/issues/1/labels/Signed+CLA
+    uri: https://api.github.com/repos/chef/paprika/issues/1/labels/Signed+CLA
     body:
       encoding: UTF-8
       string: "{}"
@@ -644,7 +644,7 @@ http_interactions:
   recorded_at: Wed, 03 Dec 2014 22:33:53 GMT
 - request:
     method: post
-    uri: https://api.github.com/repos/opscode/paprika/issues/1/comments
+    uri: https://api.github.com/repos/chef/paprika/issues/1/comments
     body:
       encoding: UTF-8
       string: '{"body":"Hi. I am an automated pull request bot named Curry. There
@@ -695,7 +695,7 @@ http_interactions:
       X-Accepted-Oauth-Scopes:
       - ''
       Location:
-      - https://api.github.com/repos/opscode/paprika/issues/comments/65504006
+      - https://api.github.com/repos/chef/paprika/issues/comments/65504006
       Vary:
       - Accept, Authorization, Cookie, X-GitHub-OTP
       X-Github-Media-Type:
@@ -723,7 +723,7 @@ http_interactions:
       - nosniff
     body:
       encoding: UTF-8
-      string: '{"url":"https://api.github.com/repos/opscode/paprika/issues/comments/65504006","html_url":"https://github.com/opscode/paprika/pull/1#issuecomment-65504006","issue_url":"https://api.github.com/repos/opscode/paprika/issues/1","id":65504006,"user":{"login":"curryandr","id":6596341,"avatar_url":"https://avatars.githubusercontent.com/u/6596341?v=3","gravatar_id":"","url":"https://api.github.com/users/curryandr","html_url":"https://github.com/curryandr","followers_url":"https://api.github.com/users/curryandr/followers","following_url":"https://api.github.com/users/curryandr/following{/other_user}","gists_url":"https://api.github.com/users/curryandr/gists{/gist_id}","starred_url":"https://api.github.com/users/curryandr/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/curryandr/subscriptions","organizations_url":"https://api.github.com/users/curryandr/orgs","repos_url":"https://api.github.com/users/curryandr/repos","events_url":"https://api.github.com/users/curryandr/events{/privacy}","received_events_url":"https://api.github.com/users/curryandr/received_events","type":"User","site_admin":false},"created_at":"2014-12-03T22:33:53Z","updated_at":"2014-12-03T22:33:53Z","body":"Hi.
+      string: '{"url":"https://api.github.com/repos/chef/paprika/issues/comments/65504006","html_url":"https://github.com/chef/paprika/pull/1#issuecomment-65504006","issue_url":"https://api.github.com/repos/chef/paprika/issues/1","id":65504006,"user":{"login":"curryandr","id":6596341,"avatar_url":"https://avatars.githubusercontent.com/u/6596341?v=3","gravatar_id":"","url":"https://api.github.com/users/curryandr","html_url":"https://github.com/curryandr","followers_url":"https://api.github.com/users/curryandr/followers","following_url":"https://api.github.com/users/curryandr/following{/other_user}","gists_url":"https://api.github.com/users/curryandr/gists{/gist_id}","starred_url":"https://api.github.com/users/curryandr/starred{/owner}{/repo}","subscriptions_url":"https://api.github.com/users/curryandr/subscriptions","organizations_url":"https://api.github.com/users/curryandr/orgs","repos_url":"https://api.github.com/users/curryandr/repos","events_url":"https://api.github.com/users/curryandr/events{/privacy}","received_events_url":"https://api.github.com/users/curryandr/received_events","type":"User","site_admin":false},"created_at":"2014-12-03T22:33:53Z","updated_at":"2014-12-03T22:33:53Z","body":"Hi.
         I am an automated pull request bot named Curry. There are commits in this
         pull request whose authors are not yet authorized to contribute to Chef Software,
         Inc. projects or are using a non-GitHub verified email address. To become
@@ -737,7 +737,7 @@ http_interactions:
   recorded_at: Wed, 03 Dec 2014 22:33:53 GMT
 - request:
     method: get
-    uri: https://api.github.com/repos/opscode/paprika/issues/1/labels
+    uri: https://api.github.com/repos/chef/paprika/issues/1/labels
     body:
       encoding: US-ASCII
       string: ''
