Add simple branding.
Branding added using sass globbing and override files.
Currently only supports changing the app header logo and the
color of the main search bar (as well as any color constants
defined and used in the application).

See app/assets/stylesheets/branding/README.md for notes.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ public/sitemap*
 # Ignore developer cruft
 **/.DS_Store
 .sass-cache
+
+# Ignore branding adjustments, user should track that separately
+# (ref app/assets/stylesheets/branding/README.md).
+app/assets/stylesheets/branding
+app/assets/images/branding
