--- a/spec/vcr_cassettes/curry_repository_subscriber.yml
+++ b/spec/vcr_cassettes/curry_repository_subscriber.yml
@@ -66,67 +66,6 @@ http_interactions:
     uri: https://api.github.com/hub
     body:
       encoding: UTF-8
-      string: hub.callback=<PUBSUBHUBBUB_CALLBACK_COMPUTED>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
-    headers:
-      User-Agent:
-      - Octokit Ruby Gem 3.8.0
-      Authorization:
-      - token <TOKEN>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 204
-      message: No Content
-    headers:
-      Server:
-      - GitHub.com
-      Date:
-      - Tue, 01 Dec 2015 22:25:18 GMT
-      Status:
-      - 204 No Content
-      X-Ratelimit-Limit:
-      - '5000'
-      X-Ratelimit-Remaining:
-      - '4992'
-      X-Ratelimit-Reset:
-      - '1449012274'
-      X-Oauth-Scopes:
-      - gist, repo, user
-      X-Accepted-Oauth-Scopes:
-      - admin:repo_hook, write:repo_hook
-      X-Github-Media-Type:
-      - github.v3
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Frame-Options:
-      - deny
-      Content-Security-Policy:
-      - default-src 'none'
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubdomains; preload
-      X-Content-Type-Options:
-      - nosniff
-      Vary:
-      - Accept-Encoding
-      X-Served-By:
-      - 5aeb3f30c9e3ef6ef7bcbcddfd9a68f7
-      X-Github-Request-Id:
-      - 64248A0E:14936:2D1F8FB:565E1E4E
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Tue, 01 Dec 2015 22:25:18 GMT
-- request:
-    method: post
-    uri: https://api.github.com/hub
-    body:
-      encoding: UTF-8
       string: hub.callback=<PUBSUBHUBBUB_CALLBACK_COMPUTED>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fnot_paprika%2Fevents%2Fpull_request
     headers:
       User-Agent:
@@ -183,4 +122,143 @@ http_interactions:
       string: '{"message":"No repository found for hub.topic: \"https://github.com/chef/not_paprika/events/pull_request\"","documentation_url":"https://developer.github.com/v3/repos/hooks/#pubsubhubbub"}'
     http_version: 
   recorded_at: Tue, 01 Dec 2015 22:25:19 GMT
+- request:
+    method: get
+    uri: https://api.github.com/repos/chef/paprika/hooks
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - application/vnd.github.v3+json
+      User-Agent:
+      - Octokit Ruby Gem 3.8.0
+      Content-Type:
+      - application/json
+      Authorization:
+      - token <TOKEN>
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Wed, 02 Dec 2015 01:00:02 GMT
+      Content-Type:
+      - application/json; charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Status:
+      - 200 OK
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4988'
+      X-Ratelimit-Reset:
+      - '1449020937'
+      Cache-Control:
+      - private, max-age=60, s-maxage=60
+      Etag:
+      - W/"c25896261d8c3fe7bd6c762067aad932"
+      X-Oauth-Scopes:
+      - gist, repo, user
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, public_repo, read:repo_hook, repo, write:repo_hook
+      Vary:
+      - Accept, Authorization, Cookie, X-GitHub-OTP
+      - Accept-Encoding
+      X-Github-Media-Type:
+      - github.v3; format=json
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Access-Control-Expose-Headers:
+      - ETag, Link, X-GitHub-OTP, X-RateLimit-Limit, X-RateLimit-Remaining, X-RateLimit-Reset,
+        X-OAuth-Scopes, X-Accepted-OAuth-Scopes, X-Poll-Interval
+      Access-Control-Allow-Origin:
+      - "*"
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      X-Served-By:
+      - 5aeb3f30c9e3ef6ef7bcbcddfd9a68f7
+      X-Github-Request-Id:
+      - 64248A0E:47C0:223C7B:565E4292
+    body:
+      encoding: UTF-8
+      string: '[{"url":"https://api.github.com/repos/chef/paprika/hooks/2446779","test_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/2446779/pings","id":2446779,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://currybowl.herokuapp.com/52f2934cec5edd0002000015","secret":"********","content_type":"form"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:48Z","created_at":"2014-06-19T16:01:15Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453951","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453951/pings","id":5453951,"name":"web","active":true,"events":["push"],"config":{"url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-07-29T20:55:22Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/5453952","test_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/5453952/pings","id":5453952,"name":"web","active":true,"events":["push","pull_request","pull_request_review_comment","issue_comment"],"config":{"content_type":"json","url":"https://chefio.atlassian.net/rest/bitbucket/1.0/repository/1118/sync"},"last_response":{"code":200,"status":"active","message":"OK"},"updated_at":"2015-09-23T01:25:49Z","created_at":"2015-07-29T20:55:22Z"},{"url":"https://api.github.com/repos/chef/paprika/hooks/6559471","test_url":"https://api.github.com/repos/chef/paprika/hooks/6559471/test","ping_url":"https://api.github.com/repos/chef/paprika/hooks/6559471/pings","id":6559471,"name":"web","active":true,"events":["pull_request"],"config":{"url":"http://localhost:3000/curry/pull_request_updates","secret":"********","content_type":"form"},"last_response":{"code":504,"status":"timeout","message":"Service
+        Timeout"},"updated_at":"2015-12-02T00:59:41Z","created_at":"2015-12-02T00:59:41Z"}]'
+    http_version: 
+  recorded_at: Wed, 02 Dec 2015 01:00:02 GMT
+- request:
+    method: post
+    uri: https://api.github.com/hub
+    body:
+      encoding: UTF-8
+      string: hub.callback=<PUBSUBHUBBUB_CALLBACK_COMPUTED>&hub.mode=subscribe&hub.secret=<PUBSUBHUBBUB_SECRET>&hub.topic=https%3A%2F%2Fgithub.com%2Fchef%2Fpaprika%2Fevents%2Fpull_request
+    headers:
+      User-Agent:
+      - Octokit Ruby Gem 3.8.0
+      Authorization:
+      - token <TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 204
+      message: No Content
+    headers:
+      Server:
+      - GitHub.com
+      Date:
+      - Wed, 02 Dec 2015 01:00:58 GMT
+      Status:
+      - 204 No Content
+      X-Ratelimit-Limit:
+      - '5000'
+      X-Ratelimit-Remaining:
+      - '4987'
+      X-Ratelimit-Reset:
+      - '1449020937'
+      X-Oauth-Scopes:
+      - gist, repo, user
+      X-Accepted-Oauth-Scopes:
+      - admin:repo_hook, write:repo_hook
+      X-Github-Media-Type:
+      - github.v3
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Frame-Options:
+      - deny
+      Content-Security-Policy:
+      - default-src 'none'
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubdomains; preload
+      X-Content-Type-Options:
+      - nosniff
+      Vary:
+      - Accept-Encoding
+      X-Served-By:
+      - cee4c0729c8e9147e7abcb45b9d69689
+      X-Github-Request-Id:
+      - 64248A0E:D44F:232413:565E42CA
+    body:
+      encoding: UTF-8
+      string: ''
+    http_version: 
+  recorded_at: Wed, 02 Dec 2015 01:00:58 GMT
 recorded_with: VCR 2.9.2
